--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD Notes Project</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 </head>
 <body>
-    
+    <span class="material-symbols-outlined">
+        add
+        </span>
+    <span class="material-symbols-outlined">
+        add_box
+        </span>
+
+    <span class="material-symbols-outlined">
+        select_check_box
+        </span>
+        <span class="material-symbols-outlined">
+            disabled_by_default
+            </span>
+        <span class="material-symbols-outlined">
+            delete
+            </span>
+            <span class="material-symbols-outlined">
+                edit_square
+                </span>
 </body>
 </html>
