--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD Notes Project</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+    <!-- Google fonts icons -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+   <!-- js script file -->
+    <script src="./index.js"></script>
+    <!-- theme styling -->
+    <script src="./style/style.css"></script>
 </head>
+
 <body>
     <span class="material-symbols-outlined">
         add
-        </span>
+    </span>
     <span class="material-symbols-outlined">
         add_box
-        </span>
+    </span>
 
     <span class="material-symbols-outlined">
         select_check_box
-        </span>
-        <span class="material-symbols-outlined">
-            disabled_by_default
-            </span>
-        <span class="material-symbols-outlined">
-            delete
-            </span>
-            <span class="material-symbols-outlined">
-                edit_square
-                </span>
+    </span>
+    <span class="material-symbols-outlined">
+        disabled_by_default
+    </span>
+    <span class="material-symbols-outlined">
+        delete
+    </span>
+    <span class="material-symbols-outlined">
+        edit_square
+    </span>
 </body>
+
 </html>
