--- a/index.html
+++ b/index.html
@@ -5,35 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD Notes Project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <!-- Google fonts icons -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-   <!-- js script file -->
-    <script src="./index.js"></script>
+
     <!-- theme styling -->
-    <script src="./style/style.css"></script>
+    <link rel="stylesheet" href="./asstes/style/style.css">
+    </link>
 </head>
 
 <body>
-    <span class="material-symbols-outlined">
-        add
-    </span>
-    <span class="material-symbols-outlined">
-        add_box
-    </span>
-
-    <span class="material-symbols-outlined">
-        select_check_box
-    </span>
-    <span class="material-symbols-outlined">
-        disabled_by_default
-    </span>
-    <span class="material-symbols-outlined">
-        delete
-    </span>
-    <span class="material-symbols-outlined">
-        edit_square
-    </span>
+    <div class="main-card">
+        <div class="block-container">
+            <button class="btn btn-icon btn-icon-primary" id="addNote" >
+                <span class="material-symbols-outlined">
+                    add
+                </span>
+            </button>
+            <table class="block-table">
+                <tbody class="table-body">
+                
+                </tbody>
+            </table>
+        </div>
+    </div>
+        <!-- js script file -->
+        <script src="./asstes/js/index.js"></script>
 </body>
 
 </html>
