--- a/index.html
+++ b/index.html
@@ -20,18 +20,23 @@
 </head>
 
 <body>
-    <div class="main-card">
-        <div class="block-container">
-            <button class="btn btn-icon btn-icon-primary" id="addNote" >
-                <span class="material-symbols-outlined">
-                    add
-                </span>
-            </button>
-            <table class="block-table">
-                <tbody class="table-body">
-                
-                </tbody>
-            </table>
+    <div class="body">
+        <div class="main-card">
+            <div class="block-container">
+                <div class="header">
+                    <h4>My Notes</h4>
+                    <button class="btn btn-icon btn-icon-primary" id="addNote">
+                        <span class="material-symbols-outlined">
+                            add
+                        </span>
+                    </button>
+    
+                </div>
+                <table class="block-table">
+                    <tbody class="table-body">
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
         <!-- js script file -->
